--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <figure class="photo">
               <img src="collage.jpg" alt="Vårt fotokollage" />
             </figure>
-            <div class="greeting-text">Grattis på födelsedagen min älskling!</div>
+            <div class="greeting-text">Grattis på födelsedagen lovie!</div>
           </div>
         </section>
 
